# Bitcoin-Qt

./: .gitignore  CMakeLists.txt  Error.txt  README.md
.github/workflows/: build-artifacts.yml
config/: bitcoin-node.example.conf
resources/: AppLogo.icns  Bitcoin.icns  BitcoinQt.icns  resources.qrc  windows.rc
runtime/: README.md
runtime/mariadb/: INSTALL_RECEIPT.json  homebrew.mariadb.service  homebrew.mxcl.mariadb.plist
runtime/mariadb/.brew/: mariadb.rb
runtime/mariadb/include/mysql/: mariadb_version.h
runtime/mariadb/include/mysql/server/: mysql_version.h  mysqld_ername.h  mysqld_error.h
runtime/mariadb/include/mysql/server/private/: config.h  lex_hash.h  lex_token.h  source_revision.h
runtime/mariadb/lib/: libmariadb.3.dylib
runtime/mariadb/lib/pkgconfig/: libmariadb.pc  mariadb.pc
runtime/mariadb/lib/plugin/auth_pam_tool_dir/: auth_pam_tool
runtime/mariadb/scripts/: mariadb-install-db
runtime/mariadb/support-files/: mariadb.logrotate  mysql.server
runtime/mempool/backend/: server.js
runtime/mempool/backend/src/api/: database-migration.ts
runtime/mempool/backend/src/repositories/: HashratesRepository.ts
runtime/mempool/frontend/: server.js
runtime/node/include/node/: config.gypi
scripts/: build-app.sh  build-bitcoin-core.sh  build-electrs.sh  build-mariadb-runtime-macos.sh  build-mempool.sh  build-node-runtime.sh  build-public-pool.sh  build-runtime.sh  ci-install-deps.sh  mempool-frontend-server.js  package-artifact.sh
src/: main.cpp
src/core/: AppTypes.h  ConfigManager.cpp  ConfigManager.h  Localization.h  LogManager.cpp  LogManager.h  ManagedService.cpp  ManagedService.h  RpcClient.cpp  RpcClient.h  RuntimePaths.cpp  RuntimePaths.h  ServiceManager.cpp  ServiceManager.h
src/services/: BitcoinCoreService.cpp  BitcoinCoreService.h  ElectrsService.cpp  ElectrsService.h  MempoolDatabaseService.cpp  MempoolDatabaseService.h  MempoolService.cpp  MempoolService.h  PublicPoolService.cpp  PublicPoolService.h
src/ui/: DashboardPage.cpp  DashboardPage.h  FirstRunDialog.cpp  FirstRunDialog.h  LogsPage.cpp  LogsPage.h  MainWindow.cpp  MainWindow.h  NodePage.cpp  NodePage.h  SettingsPage.cpp  SettingsPage.h
src/web/: LocalUrlInterceptor.cpp  LocalUrlInterceptor.h  WebBridge.cpp  WebBridge.h
windows/: README.md  build-app.ps1  check-environment.ps1  common.ps1  package-artifact.ps1  stage-bitcoin-core.ps1  stage-electrs.ps1  stage-mariadb-runtime.ps1  stage-mempool.ps1  stage-node-runtime.ps1  stage-public-pool.ps1  stage-runtime.ps1
